updated HAMMER links

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,9 +8,9 @@
   abstract={Cooperative multi-agent reinforcement learning (MARL) has achieved significant results, most notably by leveraging the representation learning abilities of deep neural networks. However, large centralized approaches quickly become infeasible as the number of agents scale, and fully decentralized approaches can miss important opportunities for information sharing and coordination. Furthermore, not all agents are equal - in some cases, individual agents may not even have the ability to send communication to other agents or explicitly model other agents. This paper considers the case where there is a single, powerful, central agent that can observe the entire observation space, and there are multiple, low powered, local agents that can only receive local observations and cannot communicate with each other. The job of the central agent is to learn what message to send to different local agents, based on the global observations, not by centrally solving the entire problem and sending action commands, but by determining what additional information an individual agent should receive so that it can make a better decision. After explaining our MARL algorithm, hammer, and where it would be most applicable, we implement it in the cooperative navigation and multi-agent walker domains. Empirical results show that 1) learned communication does indeed improve system performance, 2) results generalize to multiple numbers of agents, and 3) results generalize to different reward structures.},
   journal={arXiv preprint arXiv:2102.00824},
   year={2021},
-  video={https://www.youtube.com/watch?v=-Jfrnz4pkDU&ab_channel=ALA2021Workshop},
-  ppt={https://www.dropbox.com/s/jxu3riy0jxgar22/HAMMER___ALA_Presentation.pdf?dl=0},
-  pdf={https://arxiv.org/pdf/2102.00824.pdf}, 
+  video={https://youtu.be/-Jfrnz4pkDU},
+  ppt={https://ala2021.vub.ac.be/presentations/pres_paper35.pdf},
+  pdf={https://ala2021.vub.ac.be/papers/ALA2021_paper_35.pdf}, 
   selected={true} 
 }
 @article{learntocommunicate,
