added makefile; updated about page, miscellany, some news and layout pages

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -47,7 +47,7 @@
   author={Gupta, Nikunj and Shakya, Abhishek and C, Prasad}, 
   abstract={Aganitha Knowledge Machine (AKM) is a perpetual knowledge machine, with ocassional human assistance. The aim of this tool is to pipeline cognitive (AI/ML) components for the purpose of continuous knowledge construction from both structured and unstructured information sources. The content can vary from being static (reference information) to changing periodically (like news or periodic reports). As a first application of AKM, we conducted an Automatic Dossier Creation for Pharmaceutical Organizations. In general, pharmaceutical companies outsource their pipleines for manufacturing and/or importing drugs to contract development and manufacturing organizations (CDMOs) around the world. In a competitive environment, and for good business, pharma companies would want to choose the best suited option out of all the available ones. That’s where we come in. Using an intelligence tool, and minimal human assistance, we aimed at gathering and presenting information, automatically, about alternate suppliers, prices, FDA abiding manufactures, financial stability, market reach, existing clients and some more similar details concerning candidate CDMOs for desired pharma companies. As the next application of AKM, we developed Aganitha Covid Hub --- a highly automated information hub for COVID research, development, therapeutics and vaccines. Here, one can learn about efforts in vaccines, anti-virals, and antibodies and explore a specific intervention, such as Eli Lilly’s antibody candidate or even collections such as mRNA trials.},
   year={2020}, 
-  html={http://127.0.0.1:4000/al-folio/projects/akm/}, 
+  html={https://nikunj-gupta.github.io/projects/akm/}, 
 } 
 
 
@@ -57,7 +57,7 @@
   author={Gupta, Nikunj and Kanishka, Siva and Shakya, Abhishek and C, Prasad}, 
   abstract={The classical predictive maintenance problem was formulated in a reinforcement learning setting. The aim was to maximize a cost-based reward function. Features like loss of production in downtime (direct and consequential) of equipment, costs of replacement and total possible yield (revenue) from production were used to design a single reward signal, using which an RL agent must determine when to call for maintenance tasks for the equipment based on its current health or state (values from the various sensors). We defined three maintenance regimes - Normal, Schedule, Immediate (NSI), in every life span of a sub-system/component. The RL agent is asked to recommend the action at every time step, starting from a random point in the lifespan. The model is rewarded if it recommends the right action at each time step, and is penalized otherwise. The ‘game’ ends if the model recommends an I, that is, an immediate maintenance. In case of an I, the agent is highly rewarded in case it acted during the right regime, otherwise it is heavily penalized. Also, in our case, to overcome the hindrance due to data from different timelines, we divided the training of the RL agent into two stages. In the first stage, the agent is trained on the featurized data available for 2 and 6 years. Then, the remaining sensor records (corresponding to 2 months) were augmented with the learned embeddings (from stage I) to further learn (stage II) to predict maintenance tasks at appropriate times.},
   year={2020}, 
-  html={http://127.0.0.1:4000/al-folio/projects/predictivemaintenanceRL/}, 
+  html={https://nikunj-gupta.github.io/projects/predictivemaintenanceRL/}, 
 } 
 
 @article{suzukilearntorank,
@@ -66,7 +66,7 @@
   author={Gupta, Nikunj and Devulapally, Aneesha and Sihag, Manish and C, Prasad}, 
   abstract={We developed a reaction ranking framework for chemical reactions. It was customized for one of the top-10 global bio-pharma players to develop specific models to rank Suzuki Coupling reactions. Structural properties of involved reactants, catalysts and products were used as features to train our models. Additional features incorporating Suzuki reaction mechanisms were also augmented to improve the performance.},
   year={2019}, 
-  html={http://127.0.0.1:4000/al-folio/projects/suzuki/}, 
+  html={https://nikunj-gupta.github.io/projects/suzuki/}, 
 } 
 
 @article{masterthesis,
